--- a/record.html
+++ b/record.html
@@ -5,9 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Web dictaphone</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com">
+    <title>My-english</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
     <div class="container">
@@ -28,7 +32,7 @@
                 </button>
             </div>
         </div>
-
+    </div>
 
 
 
