--- a/record.html
+++ b/record.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="/site.webmanifest" />
 </head>
 <body>
-    <div class="container">
+<div class="wrapper">
         <header>
             <h1>Web dictaphone</h1>
         </header>
@@ -32,7 +32,8 @@
                 </button>
             </div>
         </div>
-    </div>
+</div>
+
 
 
 
